# legacy-sipXlang-zh

./: .gitignore  Makefile.am  configure.ac  sipxecs-lang-zh.spec.in  sipxlang-zh.spec.in
sipxpbx/WEB-INF/: LoginPage_zh.properties
sipxpbx/WEB-INF/acd/: AcdAgentPresencePanel_zh.properties  AcdAgentsPanel_zh.properties  AcdAgentsStatsPanel_zh.properties  AcdCallsStatsPanel_zh.properties  AcdHistoryPage_zh.properties  AcdLinesPanel_zh.properties  AcdPresenceServer_zh.properties  AcdQueueSelector_zh.properties  AcdQueuesPanel_zh.properties  AcdQueuesStatsPanel_zh.properties  AcdSelectServerPanel_zh.properties  AcdServerPage_zh.properties  AcdServersPanel_zh.properties  AcdSupervisorConsole_zh.properties  AddAcdAgent_zh.properties  EditAcdAgent_zh.properties  EditAcdLine_zh.properties  EditAcdQueue_zh.properties  (+1 more)
sipxpbx/acd/: sipxacd-agent_zh.properties  sipxacd-audio_zh.properties
sipxpbx/commserver/: siptrunk_zh.properties
sipxpbx/lg-nortel/: line_zh.properties  phone_zh.properties
sipxpbx/linksys/: phone_zh.properties
sipxpbx/nortel/: line_zh.properties
sipxpbx/nt1535/: phone_zh.properties
sipxpbx/polycom/: phone_zh.properties
sipxpbx/sipxcallresolver/: sipxcallresolver_zh.properties
sipxpbx/sipxconference/: conference_zh.properties
sipxpbx/sipxconfig/: sipxconfig_zh.properties
sipxpbx/sipxivr/: sipxivr_zh.properties
sipxpbx/sipxpage/: sipxpage_zh.properties
sipxpbx/sipxpark/: park-orbit_zh.properties
sipxpbx/sipxpresence/: sipxpresence_zh.properties
sipxpbx/sipxvxml/: autoattendant_zh.properties
stdprompts/.svn/: all-wcprops  entries
(+533 files in other folders)
